--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=garage7
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=chhsefwwcc
+DB_USERNAME=chhsefwwcc
+DB_PASSWORD=2xaJbwYykV
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
